# JFrogMLExamples

./: .gitignore
fraud_detection/: CONDA-INFO.md  README.md  credit-card-fraud-detection.ipynb
jfrog-hf-docker-demo/: .dockerignore  Dockerfile  Dockerfile.preloaded  README.md  build-with-local-model.sh  install-docker-mac.sh  push_to_jfrog.sh  requirements.txt
jfrog-hf-docker-demo/app/: __init__.py  main.py
jfrog-hf-docker-demo/scripts/: download_model.py
sentence-transformer/: ModelCard.md  env.txt  train_log_model.ipynb
sentence-transformer/main/: finetuning.py  model.py  pyproject.toml  requirements.txt
