[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.3.1"
pandas = ">=1.3.5"
datasets = "^2.20.0"
pyarrow = "<17.0.0"
urllib3 = "^2.2.2"
transformers = "^4.48.1"
ipykernel = "^6.29.5"
frogml = "^1.0.0"
jupyter = "^1.1.1"

